<resources>
    <string name="app_name">Symposium Cardiovascular</string>
    <string name="simp_sio">Simpósio</string>
    <string name="data_da_palestra">Data da palestra:</string>
    <string name="nome">Nome:</string>
    <string name="afilia_o">Afiliação:</string>
    <string name="informa_es_gerais">Informações gerais</string>
    <string name="dados_do_apresentador">Dados do apresentador</string>
    <string name="hor_rio">Horário:</string>
    <string name="detalhe">Detalhe:</string>
    <string name="tema">Tema:</string>
    <string name="desenvolvido">Desenvolvido por Antonio R. A. Brasil (anribrasil@gmail.com)</string>
    <string name="confirmarinscricao">Insira seus dados para confirmar a sua inscrição</string>
    <string name="nomepessoa">Nome</string>
    <string name="afiliacao">Afiliação</string>
</resources>
